<?xml version="1.0" encoding="utf-8"?>
<!--
 *  squarechan, a toy mobile photo-sharing app
 *     Copyright (C) 2012  Joseph Barillari
 *
 *     This program is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU Affero General Public License version 3
 *     as published by the Free Software Foundation.
 *
 *     This program is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 *     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true" 
    android:layout_width="fill_parent">
    <ScrollView
        android:layout_height="fill_parent" 
        android:layout_width="fill_parent"
       android:layout_marginBottom="60dip" 
       android:padding="6dip"
       android:fadingEdge="none"
       android:scrollbarStyle="outsideInset"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
	   android:layout_alignParentBottom="true" 
            android:orientation="vertical">
            <TextView
	        android:gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14dip"
                android:text="@string/splash_title"
                android:padding="8dip"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/splash_tagline"
                android:padding="8dip"/>



            <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:id="@+id/splash_agreement_textview"
               android:text="@string/splash_agreement"
               android:padding="8dip"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/splash_explanation"
                android:padding="8dip"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
       android:orientation="horizontal"
       android:padding="0dip"
       android:layout_marginTop="-50dip" 
       android:layout_alignParentBottom="true"
       android:gravity="bottom|bottom" 
       android:background="@android:drawable/bottom_bar"
       style="@android:style/ButtonBar"
       
       android:layout_height="wrap_content"
       android:layout_width="fill_parent">
      <Button
         android:id="@+id/splash_cancel"
         android:text="@string/splash_cancel_string"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
	 android:layout_weight="1"
         />
      <Button
         android:id="@+id/splash_agree_and_continue"
         android:text="@string/splash_agree_and_continue_string"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
	 android:layout_weight="1"
         />
      
    </LinearLayout>
    

</LinearLayout>

