<?xml version="1.0" encoding="utf-8"?>
<!-- based on ApiDemos from the android sdk 
      Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!--   android:theme="@style/SQBase" -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:theme="@android:style/Theme"
    style="@android:style/Theme"
    android:orientation="vertical">

    <TextView 
        android:id="@+id/location_settings_top"
        android:layout_height="wrap_content"
       android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/location_settings_top_text"
        android:gravity="left"
android:textAppearance="?android:attr/textAppearanceMedium"
         />

    <TextView 
       android:visibility="gone"
       android:textColor="#fff"
       android:id="@+id/location_settings_gps"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_marginLeft="20dip"
       android:layout_marginRight="20dip"
       android:text="@string/location_settings_gps_text"
       android:gravity="left"
        />
            
    <TextView 
       android:visibility="gone"
       android:textColor="#fff"
       android:id="@+id/location_settings_networks"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_marginLeft="20dip"
       android:layout_marginRight="20dip"
       android:text="@string/location_settings_networks_text"
       android:gravity="left"
 />
            
    <TextView 
       android:visibility="gone"
       android:textColor="#fff"
       android:id="@+id/location_settings_wifi"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_marginLeft="20dip"
       android:layout_marginRight="20dip"
       android:text="@string/location_settings_wifi_text"
       android:gravity="left"
        />
            

    <CheckBox android:id="@+id/never_wifi_checkbox"
	      android:textColor="#fff"
	      android:layout_marginLeft="10dip"
       android:layout_marginRight="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/never_show_wifi_again" />


</LinearLayout>
